--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "d3": "^7.8.5",
     "next": "^14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "satellite.js": "^5.0.0",
     "three": "^0.157.0",
-    "d3": "^7.8.5",
     "topojson-client": "^3.1.0"
   }
-} 
+}
