--- a/package.json
+++ b/package.json
@@ -16,5 +16,14 @@
     "satellite.js": "^5.0.0",
     "three": "^0.157.0",
     "topojson-client": "^3.1.0"
+  },
+  "devDependencies": {
+    "@types/d3": "^7.4.3",
+    "@types/node": "^22.14.0",
+    "@types/react": "^19.1.0",
+    "@types/react-dom": "^19.1.1",
+    "@types/three": "^0.175.0",
+    "@types/topojson-client": "^3.1.5",
+    "typescript": "^5.8.2"
   }
 }
