--- a/package.json
+++ b/package.json
@@ -24,6 +24,6 @@
     "@types/react-dom": "^19.1.1",
     "@types/three": "^0.175.0",
     "@types/topojson-client": "^3.1.5",
-    "typescript": "^5.8.2"
+    "typescript": "5.8.3"
   }
 }
