--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/styled-components": "^5.1.34",
     "d3": "^7.8.5",
     "dexie": "^4.0.11",
     "next": "^14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "satellite.js": "^5.0.0",
+    "styled-components": "^6.1.17",
     "three": "^0.157.0",
     "topojson-client": "^3.1.0"
   },
