--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@
 /.next/
 /out/
 
+# python
+__pycache__
+
 # production
 /build
 
@@ -23,6 +26,7 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
+.env
 .env.local
 .env.development.local
 .env.test.local
