--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "install-api": "pip install -r api/requirements.txt",
     "dev-api": "uvicorn api.main:app --reload",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
