--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/styled-components": "^5.1.34",
     "d3": "^7.8.5",
     "dexie": "^4.0.11",
+    "marked": "^15.0.8",
     "next": "^14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
