--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.76.1",
     "@types/styled-components": "^5.1.34",
     "d3": "^7.8.5",
     "dexie": "^4.0.11",
