--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "styled-components": "^6.1.17",
     "tailwindcss": "^4.1.7",
     "three": "^0.157.0",
-    "topojson-client": "^3.1.0"
+    "topojson-client": "^3.1.0",
+    "zustand": "^5.0.4"
   },
   "devDependencies": {
     "@types/d3": "^7.4.3",
