--- a/.gitignore
+++ b/.gitignore
@@ -28,7 +28,7 @@ yarn-error.log*
 
 # local env files
 .env
-.env.development.local
+.env.local
 .env.test.local
 .env.production.local
 google-application-credentials.json
