--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,7 +1,6 @@
-fastapi==0.109.2
+fastapi==0.115.7
 uvicorn==0.27.1
 python-dotenv==1.0.1
-requests==2.31.0
 google-genai==1.11.0
 langchain[anthropic,google-genai]
 langchain-community
@@ -9,3 +8,4 @@ langchain-google-vertexai
 langchain-core
 langgraph
 bs4
+cognee==0.1.42
