more cognee stuff

--- a/api/cognee/Dockerfile
+++ b/api/cognee/Dockerfile
@@ -3,4 +3,4 @@ FROM cognee/cognee:main
 COPY .env .
 
 # Copy the local databases into the container
-# COPY venv/lib/python3.11/site-packages/cognee/.cognee_system/databases /app/.venv/lib/python3.12/site-packages/cognee/.cognee_system/databases
+COPY .cognee_system/databases /app/.venv/lib/python3.12/site-packages/cognee/.cognee_system/databases
