--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,9 +1,19 @@
 FROM python:3.11-slim
 WORKDIR /app
 
-COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+# Install Poetry
+RUN pip install poetry
 
+# Copy Poetry configuration files
+COPY pyproject.toml poetry.lock* ./
+
+# Configure Poetry to not create a virtual environment in Docker
+RUN poetry config virtualenvs.create false
+
+# Install dependencies
+RUN poetry install --no-dev --no-interaction --no-ansi
+
+# Copy application code
 COPY . .
 
 EXPOSE 8000
