--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -7,18 +7,15 @@ RUN mkdir -p /app/chroma_db
 # Install Poetry
 RUN pip install poetry
 
-# Copy Poetry configuration files
-COPY pyproject.toml poetry.lock* ./
-
 # Configure Poetry to not create a virtual environment in Docker
 RUN poetry config virtualenvs.create false
-
-# Install dependencies
-RUN poetry install --no-dev --no-interaction --no-ansi
 
 # Copy application code
 COPY . .
 
+# Install dependencies
+RUN poetry install --no-interaction --no-ansi
+
 EXPOSE 8000
 
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["poetry", "run", "uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
